crates/biome_js_analyze/tests/specs/nursery/noPlaywrightEval/invalid/eval-all.js
const texts = await page.$$eval('.foo', els => els.map(el => el.textContent));

